--- a/Cours 2/index.html
+++ b/Cours 2/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
   <title>Vivez le html</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
